# NEUFR-SpinnakerFLIR-IMUVN100

./: README.md
spinnaker_sdk_camera_driver/: CMakeLists.txt
spinnaker_sdk_camera_driver/include/spinnaker_sdk_camera_driver/: autoCameraSettings.h  capture.h  customCameraSettings.h
spinnaker_sdk_camera_driver/src/: acquisition_node.cpp  autoCameraSettings.cpp  camera.cpp  customCameraSettings.cpp
vn_100_ws/: CMakeLists.txt
vn_100_ws/devel/: .catkin  .rosinstall  setup.sh
vn_100_ws/devel/lib/imu_vn_100/: imu_vn_100_cont_node
vn_100_ws/devel/lib/pkgconfig/: imu_vn_100.pc
vn_100_ws/devel/share/imu_vn_100/cmake/: imu_vn_100Config.cmake
vn_100_ws/src/imu_vn_100/launch/: vn_100_cont.launch
vn_100_ws/src/imu_vn_100/src/: imu_vn_100.cpp
